# Cargo-Bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
admin-web/: Dockerfile  main.py  railway.toml
client-web/: Dockerfile  main.py  railway.toml
src/cargo_bots/: __init__.py  admin_app.py  app_factory.py  client_app.py  main.py  run.py
src/cargo_bots/api/: webhooks.py
src/cargo_bots/bots/: admin.py  client.py  keyboards.py  runtime.py
src/cargo_bots/bots/middlewares/: logging.py
src/cargo_bots/core/: access.py  config.py  container.py  logging.py
src/cargo_bots/db/: base.py  models.py  session.py
src/cargo_bots/resources/: supplier_template.json
src/cargo_bots/services/: address_book.py  client_service.py  excel_parser.py  import_service.py  normalization.py  notification_service.py  storage.py
src/cargo_bots/tasks/: celery_app.py  jobs.py
src/cargo_bots/tools/: import_legacy.py
tests/: test_address_book.py  test_admin_access.py  test_excel_parser.py  test_normalization.py  test_run.py
worker/: Dockerfile  example_adress.txt  main.py  railway.toml
