[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cargo-bots"
version = "0.1.0"
description = "High-throughput cargo Telegram bots built with FastAPI, aiogram, Celery, PostgreSQL, and Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.17,<4.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "boto3>=1.37,<2.0",
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "orjson>=3.10,<4.0",
  "pandas>=2.2,<3.0",
  "prometheus-fastapi-instrumentator>=7.1,<8.0",
  "pydantic-settings>=2.7,<3.0",
  "python-calamine>=0.3,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "redis>=5.2,<6.0",
  "sentry-sdk[fastapi]>=2.26,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=24.4,<25.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

